Keep hiding the sort button for fixed elements (keep loading them in HTML for alignment)

--- a/css/widget-css-classes.css
+++ b/css/widget-css-classes.css
@@ -9,6 +9,10 @@
 .wcssc_sort {
 	display: none;
 }
+.wcssc_sort_fixed .wcssc_sort {
+	visibility: hidden;
+}
+
 .wcssc_sortable .wcssc_drop_placeholder {
 	background: #e5e5e5;
 	height: 30px;
